# ingest-pdf

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
digest_pdf/: __init__.py  cli.py  layout.py  manifest.py  models.py  pipeline.py  placement.py  provenance.py  render.py
digest_pdf/strategies/: _mineru.py  base.py  detect.py  page.py  question.py
docs/adr/: 0001-local-vlm-warm-pipeline.md  0002-auto-detected-segmentation-colocated-units.md  0003-one-vlm-call-per-page.md  0004-outline-from-transcription-headings.md  0005-nuextract-transcription-model.md  0006-question-strategy-mineru-zero-vlm.md  0007-mineru-vlm-mlx-pro-2605.md  0008-repo-owned-layout-spec-placement-layer.md  0009-outline-via-mineru.md  0010-mineru-sole-transcriber-retire-vlm.md
ingest_pdf/: __init__.py  cli.py  layout.py  manifest.py  models.py  pipeline.py  placement.py  provenance.py
ingest_pdf/strategies/: _crop.py  _mineru.py  base.py  detect.py  outline.py  page.py  question.py
ingest_pdf/vlm/: postprocess.py  prompt.py  worker.py
skills/digest-pdf/: SKILL.md
skills/ingest-pdf/: SKILL.md
tests/: test_cli_inspect.py  test_cli_vlm.py  test_layout.py  test_layout_placement.py  test_manifest_model.py
tests/strategies/: test_crop.py  test_detect.py  test_mineru_runner.py  test_outline_mineru.py  test_pipeline_parallel_plan.py  test_question.py  test_question_finalize.py  test_question_integration.py
