[project]
name = "ingest-pdf"
version = "0.1.0"
description = "General-purpose PDF digestion: any PDF -> a structured tree of (image, transcription) Units."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10",
    "httpx>=0.27",  # only used by the MinerU warm-server (MINERU_API_URL) path; imported lazily
]

# The local VLM stack is heavy and only needed from milestone 2 on; keep it optional
# so the core pipeline installs light. Install with:  uv sync --extra vlm
[project.optional-dependencies]
vlm = ["mlx-vlm>=0.6.5"]

[project.scripts]
ingest = "ingest_pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest_pdf"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
