[project]
name = "digest-pdf"
version = "0.1.0"
description = "General-purpose PDF digestion: any PDF -> a structured tree of (image, transcription) Units."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10",
    "httpx>=0.27",  # only used by the MinerU warm-server (MINERU_API_URL) path; imported lazily
    "pyyaml>=6",
]

# No in-process VLM: MinerU (isolated venv, `digest --install-mineru`) is the sole
# transcription engine for every strategy (ADR-0010). The former `vlm` extra (mlx-vlm /
# NuExtract3) was retired — the core install is light and needs no local ML stack.

[project.scripts]
digest = "digest_pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["digest_pdf"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
